unpackaged/main/default/objects/tspa__Remote_Assistant_MultiLanguage__c/tspa__Remote_Assistant_MultiLanguage__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Visual Remote Assistant -MultiLanguage</label>
</CustomObject>