unpackaged/main/default/objects/tspa__Remote_Assistant_MultiLanguage__c/fields/tspa__Order__c.field-meta.xml
<CustomField>
    <fullName>tspa__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>