unpackaged/main/default/objects/tspa__Remote_Assistant_MultiLanguage__c/fields/tspa__Selected__c.field-meta.xml
<CustomField>
    <fullName>tspa__Selected__c</fullName>
    <label>Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>