unpackaged/main/default/objects/tspa__Remote_Assistant_MultiLanguage__c/fields/tspa__Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>